[workspace]
members = [
    "runtime",
    "consensus",
    "crypto",
    "mempool",
    "governance",
    "rpc",
    "node",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AURA L1 Team <team@aura-l1.io>"]
license = "MIT"
repository = "https://github.com/aura-l1/aura"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
rand = "0.8"
aes-gcm = "0.10"

# Database
sled = "0.34"

# Networking
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
bs58 = "0.5"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
proptest = "1.4"
